# mensa-upb-cli

./: Cargo.toml  README.md
src/: app.rs  cli_args.rs  daily_menu.rs  dish.rs  json.rs  lib.rs  main.rs  mensa.rs  menu.rs  menu_table.rs  tui.rs  util.rs
