[package]
name = "mensa-upb"
version = "0.1.0"
edition = "2021"
authors = ["Moritz Hölting"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
futures = "0.3.28"
itertools = "0.11.0"
reqwest = "0.11.22"
scraper = "0.17.1"
term-data-table = "0.2.3"
tokio = { version = "1.33.0", features = ["full"] }
